# quicksilver-macos

./: .gitignore  Cargo.toml  LICENSE.md  README-Sparkle.md  README.md  appcast.xml  build.sh  clean-up-gh-pages.sh  create-dmg.sh  model.cbor
Quicksilver/Quicksilver/: AnalyzerView.swift  AnalyzerViewModel.swift  CaptureService.swift  Info.plist  Quicksilver-Bridging-Header.h  QuicksilverApp.swift  RustBackend.swift  quicksilver_bridge.h
Quicksilver/Quicksilver.xcodeproj/: project.pbxproj
Quicksilver/Quicksilver/Assets.xcassets/Quicksilver.appiconset/: Contents.json
Quicksilver/QuicksilverTests/: QuicksilverTests.swift
Quicksilver/QuicksilverUITests/: QuicksilverUITests.swift  QuicksilverUITestsLaunchTests.swift
packaging/: LICENSE.rtf  settings.py
src/: lib.rs
src/fakeprint/: curve.rs  mod.rs  stft.rs
src/model/: mod.rs
