[package]
name = "quicksilver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []

[dependencies]
realfft = "3.5.0"
rubato = "0.16.2"
scirs2-core = "0.3.1"
scirs2-interpolate = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
hound = "3.5.1"


[dev-dependencies]
serde = "1.0.228"
serde_json = "1.0.149"

[profile.profiling]
inherits = "release"
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
